@@ -52,6 +52,9 @@ struct nsd_options;
 struct daemon_remote;
 struct rc_state;
 
+/* the remote control needs less backlog than the tcp53 service */
+#define TCP_BACKLOG_REMOTE 16 /* listen() tcp backlog */
+
 /**
  * Create new remote control state for the daemon.
  * Also setups the control port.
